other-mpol/disable-automountserviceaccounttoken/disable-automountserviceaccounttoken.yaml
apiVersion: policies.kyverno.io/v1
kind: MutatingPolicy
metadata:
  name: disable-automountserviceaccounttoken
  annotations:
    policies.kyverno.io/title: Disable automountServiceAccountToken
    policies.kyverno.io/category: Other, EKS Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: ServiceAccount
    policies.kyverno.io/description: >-
      A new ServiceAccount called `default` is created whenever a new Namespace is created.
      Pods spawned in that Namespace, unless otherwise set, will be assigned this ServiceAccount.
      This policy mutates any new `default` ServiceAccounts to disable auto-mounting of the token
      into Pods obviating the need to do so individually.
spec:
  matchConstraints:
    resourceRules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE"]
      resources: ["serviceaccounts"]
      resourceNames: ["default"]
  mutations:
  - patchType: ApplyConfiguration
    applyConfiguration:
      expression: |
        Object{
          automountServiceAccountToken: false
        }
