other-mpol/disable-automountserviceaccounttoken/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disable-automountserviceaccounttoken
policies:
- ../disable-automountserviceaccounttoken.yaml
resources:
- resource.yaml
results:
- kind: ServiceAccount
  patchedResources: patchedResource.yaml
  policy: disable-automountserviceaccounttoken
  resources:
  - default
  result: pass
  isMutatingPolicy: true
